--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "node-sass": "^4.9.2",
     "nuxt-sass-resources-loader": "^2.0.3",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^7.0.3",
+    "vee-validate": "^2.1.0-beta.6"
   }
 }
