--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.9.2",
     "nuxt-sass-resources-loader": "^2.0.3",
     "sass-loader": "^7.0.3",
-    "vee-validate": "^2.1.0-beta.6"
+    "vee-validate": "^2.1.0-beta.6",
+    "vue-scrollto": "^2.11.0"
   }
 }
