--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.3.1",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "node-sass": "^4.9.2",
     "nuxt-sass-resources-loader": "^2.0.3",
     "sass-loader": "^7.0.3",
     "vee-validate": "^2.1.0-beta.6",
-    "vue-scrollto": "^2.11.0"
+    "vue-scrollto": "^2.11.0",
+    "webpack-bundle-analyzer": "^2.13.1"
   }
 }
