--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "deploy": "./bin/deploy.sh"
   },
   "dependencies": {
-    "nuxt": "^2.11.0"
+    "nuxt": "^2.14.0",
+    "vue-scrollto": "^2.18.2"
   },
   "devDependencies": {
-    "@nuxtjs/axios": "^5.3.1",
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "node-sass": "^4.13.1",
-    "nuxt-sass-resources-loader": "^2.0.3",
-    "sass-loader": "^7.0.3",
-    "vee-validate": "^2.1.0-beta.6",
-    "vue-scrollto": "^2.11.0",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "@nuxtjs/axios": "5.13.6",
+    "@nuxtjs/google-analytics": "2.4.0",
+    "sass": "^1.42.0",
+    "sass-loader": "^10.2.0",
+    "vee-validate": "2.2.15",
+    "webpack-bundle-analyzer": "4.4.2"
   }
 }
